--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 45px;
+    padding-top: 100px;
 }
 
 .leftside {
@@ -104,6 +105,22 @@ body {
     border-radius: 5px;
     padding: 15px 15px 15px 32px;
 }
+.successbox h1{
+    color: #000000;
+    font-family: "Poppins", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.successbox span{
+    color: #000000;
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 26px; /* 173.333% */
+}
 
 .errorinp{
     border: solid 1px;
@@ -123,10 +140,25 @@ font-style: normal;
 font-weight: 500;
 line-height: 26px; /* 236.364% */
 }
+.anotherone{
+    width: 50%;
+}
+.successbox{
+    text-align: center;
+    width: 100%;
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 80px;
+    
+}
 
 
 @media only screen and (max-width: 600px){
     .section1{
+        padding: 0;
         flex-direction: column;
     }
 
@@ -137,6 +169,9 @@ line-height: 26px; /* 236.364% */
     }
 
     .leftside{
+        width: 100%;
+    }
+    .anotherone{
         width: 100%;
     }
 }
